# xcra

./: ProjectHome.md
xcra/: ANNOUNCE  CHANGES  ChangeLog  Imakefile  PROBLEMS  README  TODO  config.H  config.h.in  config.mk.in  configure  configure.in  unifdistrib.pl
xcra/icons/: Imakefile  larrow.xbm  rarrow.xbm  xcra.xbm  xnote.xbm
xcra/lib/: Assert.C  Assert.H  Date.C  Date.H  Error.C  Error.H  Imakefile  LockFile.C  LockFile.H  dlist.C  dlist.H
xcra/libX/: Imakefile  XawBiff.C  XawBiff.H  XawCalendar.C  XawCalendar.H  XawClock.C  XawClock.H  XawDialog.C  XawDialog.H  XawEyes.C  XawEyes.H  XawFileSelect.C  XawFileSelect.H  XawHelp.C  XawHelp.H  XawLauncher.C  XawLauncher.H
xcra/libX/xbiff/: Imakefile  Mailbox.c  MailboxP.h
xcra/libX/xclock/: Clock.c  Imakefile
xcra/libX/xeyes/: Eyes.c  EyesP.h  Imakefile  transform.c  transform.h
xcra/libX/xfsel/: DirList.c  DirList.h  FileSelect.c  FileSelect.h  FileSelectP.h  Imakefile
xcra/progs/: Imakefile  NoteManager.C  NoteManager.H  XCra.ad.sed  XawTask.C  XawTask.H  cra-report.cpp  cra-report.man.cpp  help.perl  noteManager.man  tconfigure  xcra.C  xcra.help.cpp  xcra.man.cpp
xcra/progs/.cra/: .notes  bastidon.notes  t-1996-01  t-1996-02  xcra.notes
xcra/xnotes/: Imakefile  Note.C  Note.H  XawNote.C  XawNote.H  XawNoteList.C  XawNoteList.H  XawNoteMgr.C  XawNoteMgr.H
xcra/xtask/: Imakefile  Task.C  Task.H  TaskControl.C  TaskControl.H  XawTaskList.C  XawTaskList.H  XawTaskMgr.C  XawTaskMgr.H
